--- a/styles.css
+++ b/styles.css
@@ -372,11 +372,16 @@ li{
         align-items: center;
     }
 
-    #quienesSomos img, #servicios img{
+    #quienesSomos img{
         margin-left: 20px;
         margin-right: 20px;
         width: 300px;
     }
+	
+    #servicios img{
+        margin: 0 auto;
+        width: 315px;
+	}
 
     #quienesSomos .marginLeft50{
         margin: 0;
@@ -395,10 +400,6 @@ li{
         margin-right: 20px;
         text-align: justify;
         width: 300px;
-    }
-
-    #servicios img{
-        margin-bottom: 20px;
     }
 
     #txtServicios{
